shiro入门（一）